# ML-Data-Wrangler

./: .envrc  .gitignore  LICENSE  README.md  corpus_2024-10-23.json  pyproject.toml  requirements.txt  wrangled_data_2024-10-08.json
completed/: processed_tickets2024-10-11.json
src/: LDA_logic.py  app.py  classes.py  cleaned_lines.csv  lda.py  utility.py  wrangler.py
