[tool.poetry]
name = "ml-data-wrangler"
version = "0.1.0"
description = ""
authors = ["Terry Arthur Brooks, Jr. <Terry.Arthur@BrooksJr.com>"]
license = "MIT"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10.0"
gradio = "*"
matplotlib = "*"
gensim = "*"
loguru = "*"
nltk = "*"
PyQt5 = "*"
spacy = "*"
seaborn = "^0.13.2"
pyldavis = "^3.4.1"
scipy = "1.12"
validators = "^0.34.0"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
prospector = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths =  [
        "/Users/terry-brooks/GitHub/ML-Data-Wrangler/src",
        "/Users/terry-brooks/GitHub/ML-Data-Wrangler"
    ]
virtual_env = "./.venv/"
force_alphabetical_sort_within_sections = true
remove_redundant_aliases = true
dedup_headings = true
